feat: Enable LaTeX in Desktop